fix(section): change gap to padding for more responsive mobile styling

--- a/packages/section/src/section.pcss
+++ b/packages/section/src/section.pcss
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: column;
     gap: var(--sds-space-gap-medium);
-    padding-bottom: var(--sds-space-gap-large);
+    padding-bottom: var(--sds-space-padding-large);
   }
 
   &__cta {
@@ -19,7 +19,7 @@
   }
 
   &__content {
-    padding-top: var(--sds-space-gap-large);
+    padding-top: var(--sds-space-padding-large);
   }
 
   @media (--sds-base-breakpoint-tablet) {
